--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   <main id="m_content">
     <section id="app">
       <div class="app__displayBox">
-        <p id="display" class="app__display"></p>
+        <output id="display" class="app__display">
+        </output>
       </div>
       <nav class="app__buttonBox">
         <button id="generate" class="button-clean app__button">
