CMT-13: create evento DOMContentLoaded no window e click do button#button_generate; change id's de alguns elementos

--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
   <main id="m_content">
     <section id="app">
       <div class="app__displayBox">
-        <output id="display" class="app__display">
+        <output id="output_display" class="app__display">
+          A
         </output>
       </div>
       <nav class="app__buttonBox">
-        <button id="generate" class="button-clean app__button">
+        <button id="generate_button" class="button-clean app__button">
           gerar
         </button>
       </nav>
