CMT-17: create estrutura do menu de configuracoes; create bloco de estilo para as classes do menu de configuracoes; add parametros para funcao generate(from, to)

--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
           gerar
         </button>
       </nav>
+      <form class="app__configBox">
+        <span class="app_config__textBox">
+          De 
+          <input type="text" id="input_first_letter" 
+            class="app__letterInput" size="1"> 
+          a 
+          <input type="text" id="input_last_letter" 
+            class="app__letterInput" size="1">
+        </span>
+      </form>
     </section>
   </main>
   <footer id="m_footer" class="page__footer">
