CMT-21: full_create funcao splitLetters(start, end); change tira a responsabilidade de criar grupos de letras da funcao generate(lettersGroup); change/add atualiza a documentacao da funcao generate() e adiciona a documentacao da funcao splitLetters() em README.md

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
           <span class="app_config__textBox">
             <label for="input_first_letter">De</label>
             "<input type="text" id="input_first_letter" 
-              class="app__letterInput" size="1">"
+              class="app__letterInput" size="1" autocomplete="off">"
             <label for="input_last_letter">a</label>
             "<input type="text" id="input_last_letter" 
-              class="app__letterInput" size="1">"
+              class="app__letterInput" size="1" autocomplete="off">"
           </span>
         </form>
       </div>
@@ -44,7 +44,7 @@
   </main>
   <footer id="m_footer" class="page__footer">
     <section class="footer__contentBox">
-      <a href="#" class="link-23">
+      <a href="https://github.com/JEmerson23" class="link-23">
         JEmerson23
       </a>
     </section>
